50 truc dont fixs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/Procedural/Procedural_P.Procedural_P
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -125,4 +125,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
